# Stock-Market-Prediction

./: .env.example  .gitignore  Cluster Analysis.ipynb  README.md  download_data.py  pyproject.toml  requirements.txt  technical_indicators.py
base/: __init__.py  model_tf.py
data/: 2019_AMCR_1min.csv  2019_BRK.B_1min.csv  2019_CTVA_1min.csv  2019_DD_1min.csv  2019_DISH_1min.csv  2019_DOW_1min.csv  2019_VIAC_1min.csv  tickers-s&p500.csv
loader/: __init__.py  data_generator.py
notebooks/: Stock_direction_prediction.ipynb
script/: download_data.py
scripts/: download_data.py
src/configs/: data.py
src/processing/: feature_extraction.py
util/: technical_indicators.py
